soporte para filtrado por email
